# apple-notes-mcp

./: .gitignore  README.md  apple_notes.py  pyproject.toml
