[project]
name = "apple-notes"
version = "0.1.0"
description = "MCP server for interacting with Apple Notes on macOS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
apple-notes = "apple_notes:main"

[tool.uv]
dev-dependencies = []

